# SuperCell_Challenge

./: .generate_xcode_project.sh  CMakeLists.txt  Makefile  README.md
srcs/: Event.cpp  Event.hpp  Game.cpp  Game.hpp  Menu.cpp  Menu.hpp  Parameters.hpp  Platform.cpp  Platform.hpp  Text.cpp  Text.hpp  animation.hpp  fadeAnimation.cpp  main.cpp  sfml.hpp  utils.cpp  utils.hpp
